2009-09-10  Jason Merrill  <jason@redhat.com>

	* repo.c (extract_string, get_base_filename, init_repo): constify.

2009-09-09  Jason Merrill  <jason@redhat.com>

	* error.c (find_typenames_r): Also add decltypes.

2009-09-09  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/28293
	* decl2.c (grokfield): Check for explicit template argument lists.

2009-09-09  Jack Howarth  <howarth@bromo.med.uc.edu>

	PR bootstrap/41180
	* Make-lang.in: Remove redundant code from linkage for darwin10.

2009-09-08  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/39923
	* decl.c (build_init_list_var_init): Check return value of
	perform_implicit_conversion.

2009-09-03  Jason Merrill  <jason@redhat.com>

	* class.c (currently_open_class): Make sure we're dealing with the
	main variant.

	* cp-tree.h (enum overload_flags): Remove OP_FLAG.
	* method.c (lazily_declare_fn): Check for dtorness in ABI warning.

	* name-lookup.c (is_class_level): Remove.
	(push_binding_level, leave_scope, resume_scope): Adjust.
	(pushlevel_class): Adjust.
	(poplevel_class): Make sure we're on class_binding_level.

	* decl.c (grokmethod): Rename from start_method.
	(finish_method): Remove.
	* cp-tree.h: Adjust.
	* parser.c (cp_parser_save_member_function_body): Adjust.

2009-09-03  Doug Kwan  <dougkwan@google.com>

	* tree.c (cp_fix_function_decl_p): New.
	(cp_free_lang_data): New.

2009-09-03  Diego Novillo  <dnovillo@google.com>

	* Make-lang.in (decl2.o): Add dependency on $(POINTER_SET_H).
	* decl2.c: Include pointer-set.h.
	(collect_candidates_for_java_method_aliases): New.
	(cp_write_global_declarations): Call it.
	Add local variable CANDIDATES.  If set, call
	build_java_method_aliases.
	(build_java_method_aliases): Add argument CANDIDATES.
	Use it to determine if FNDECL should get a hidden alias.
	* cp-objcp-common.h (LANG_HOOKS_FREE_LANG_DATA): Define.
	* cp-tree.h (cp_free_lang_data): Declare.

2009-09-03  Richard Guenther  <rguenther@suse.de>
